--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">Rohit Patil</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/myphoto.jpeg" alt="My photo" class="rounded-circle" height="300" width="300">
+                    <img src="assets/images/me.jpg" alt="My photo" class="rounded-circle" height="300" width="300">
 
                 </div>
                 <br/>
@@ -123,4 +123,5 @@
 </body>
 
 </html>
+
 
